--- a/_sass/_scrollbar.scss
+++ b/_sass/_scrollbar.scss
@@ -28,6 +28,7 @@
  
 .scroll-element {
     display: none;
+    border-radius: 0!important;
 }
 .scroll-element, .scroll-element div {
     box-sizing: content-box;
@@ -72,10 +73,10 @@
  
  
  
-/*************** SIMPLE OUTER SCROLLBAR ***************/
+/*************** SIMPLE INNER SCROLLBAR ***************/
  
-.scrollbar-outer > .scroll-element,
-.scrollbar-outer > .scroll-element div
+.scrollbar-inner > .scroll-element,
+.scrollbar-inner > .scroll-element div
 {
     border: none;
     margin: 0;
@@ -84,11 +85,7 @@
     z-index: 10;
 }
  
-.scrollbar-outer > .scroll-element {
-    background-color: #ffffff;
-}
- 
-.scrollbar-outer > .scroll-element div {
+.scrollbar-inner > .scroll-element div {
     display: block;
     height: 100%;
     left: 0;
@@ -96,49 +93,50 @@
     width: 100%;
 }
  
-.scrollbar-outer > .scroll-element.scroll-x {
-    bottom: 0;
-    height: 12px;
+.scrollbar-inner > .scroll-element.scroll-x {
+    bottom: 2px;
+    height: 8px;
     left: 0;
     width: 100%;
 }
  
-.scrollbar-outer > .scroll-element.scroll-y {
+.scrollbar-inner > .scroll-element.scroll-y {
     height: 100%;
-    right: 0;
+    right: 2px;
     top: 0;
-    width: 12px;
+    width: 8px;
 }
  
-.scrollbar-outer > .scroll-element.scroll-x .scroll-element_outer { height: 8px; top: 2px; }
-.scrollbar-outer > .scroll-element.scroll-y .scroll-element_outer { left: 2px; width: 8px; }
- 
-.scrollbar-outer > .scroll-element .scroll-element_outer { overflow: hidden; }
-.scrollbar-outer > .scroll-element .scroll-element_track { background-color: #eeeeee; }
- 
-.scrollbar-outer > .scroll-element .scroll-element_outer,
-.scrollbar-outer > .scroll-element .scroll-element_track,
-.scrollbar-outer > .scroll-element .scroll-bar {
+.scrollbar-inner > .scroll-element .scroll-element_outer {
+    overflow: hidden;
 }
  
-.scrollbar-outer > .scroll-element .scroll-bar { background-color: #d9d9d9; }
-.scrollbar-outer > .scroll-element .scroll-bar:hover { background-color: #c2c2c2; }
-.scrollbar-outer > .scroll-element.scroll-draggable .scroll-bar { background-color: #919191; }
+.scrollbar-inner > .scroll-element .scroll-element_outer,
+.scrollbar-inner > .scroll-element .scroll-element_track,
+.scrollbar-inner > .scroll-element .scroll-bar {
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
+}
  
+.scrollbar-inner > .scroll-element .scroll-element_track,
+.scrollbar-inner > .scroll-element .scroll-bar {
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+    filter: alpha(opacity=40);
+    opacity: 0.4;
+}
  
-/* scrollbar height/width & offset from container borders */
- 
-.scrollbar-outer > .scroll-content.scroll-scrolly_visible { left: -12px; margin-left: 12px; }
-.scrollbar-outer > .scroll-content.scroll-scrollx_visible { top:  -12px; margin-top:  12px; }
- 
-.scrollbar-outer > .scroll-element.scroll-x .scroll-bar { min-width: 10px; }
-.scrollbar-outer > .scroll-element.scroll-y .scroll-bar { min-height: 10px; }
+.scrollbar-inner > .scroll-element .scroll-element_track { background-color: #e0e0e0; }
+.scrollbar-inner > .scroll-element .scroll-bar { background-color: #c2c2c2; }
+.scrollbar-inner > .scroll-element:hover .scroll-bar { background-color: #919191; }
+.scrollbar-inner > .scroll-element.scroll-draggable .scroll-bar { background-color: #919191; }
  
  
 /* update scrollbar offset if both scrolls are visible */
  
-.scrollbar-outer > .scroll-element.scroll-x.scroll-scrolly_visible .scroll-element_track { left: -14px; }
-.scrollbar-outer > .scroll-element.scroll-y.scroll-scrollx_visible .scroll-element_track { top: -14px; }
+.scrollbar-inner > .scroll-element.scroll-x.scroll-scrolly_visible .scroll-element_track { left: -12px; }
+.scrollbar-inner > .scroll-element.scroll-y.scroll-scrollx_visible .scroll-element_track { top: -12px; }
  
-.scrollbar-outer > .scroll-element.scroll-x.scroll-scrolly_visible .scroll-element_size { left: -14px; }
-.scrollbar-outer > .scroll-element.scroll-y.scroll-scrollx_visible .scroll-element_size { top: -14px; }
+ 
+.scrollbar-inner > .scroll-element.scroll-x.scroll-scrolly_visible .scroll-element_size { left: -12px; }
+.scrollbar-inner > .scroll-element.scroll-y.scroll-scrollx_visible .scroll-element_size { top: -12px; }
